<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCalculo">

    <TextView
        android:id="@+id/titlePage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textCalendar"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_calendario"
        android:text="@string/texto_calendario"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titlePage2" />

    <TextView
        android:id="@+id/txtDescColeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/texto_coleta"
        android:textColor="@color/desc_text"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePage2" />

    <CheckBox
        android:id="@+id/checkBoxHediondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="72dp"
        android:text="@string/texto_hediondo"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxReu"
        app:layout_constraintTop_toBottomOf="@+id/txtDia" />

    <EditText
        android:id="@+id/txtDia"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/texto_dia"
        android:inputType="number"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMes" />

    <CheckBox
        android:id="@+id/checkBoxReu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:text="@string/texto_reu"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDia" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/texto_ano"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCalendar" />

    <EditText
        android:id="@+id/txtMes"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/texto_mes"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAno" />

    <TextView
        android:id="@+id/txtPenaTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto_pena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCalendar" />

    <TextView
        android:id="@+id/txtTipoCrime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto_tipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDia" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/black"
        android:text="@string/texto_enviar"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDia" />


</androidx.constraintlayout.widget.ConstraintLayout>